--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="sv.edu.udb.dsm.pruebapractica1">
 
+
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,6 +12,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.PruebaPractica1">
+        <activity
+            android:name=".Ejercicio1_1"
+            android:exported="false" />
+        <activity
+            android:name=".Ejercicio2"
+            android:exported="false" />
+        <activity
+            android:name=".Ejercicio1"
+            android:exported="false" />
         <activity
             android:name=".Menu"
             android:exported="false" />
